--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
   </main>
 
   <footer>
-    <p>Copyright &copy; 2024 Natalia</p>
+    <p>Copyright &copy; 2024 <a href="" target="_blank"> Natalia </a></p>
   </footer>
 
   <script src="script.js"></script>
