--- a/index.html
+++ b/index.html
@@ -130,7 +130,8 @@
             <label for="phone">Phone Number</label>
             <input type="text" id="phone" name="phone" required>
 
-            <label for="birthplace">Tempat Lahir</label>
+            <label for="birthplace">Tempat La
+              hir</label>
             <input type="text" id="birthplace" name="birthplace" required>
 
             <label for="birthdate">Tanggal Lahir</label>
