--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
   <header>
-    <h1>MY Portfolio</h1>
+    <h1>My Portfolio</h1>
     <div class="menu-toggle" id="menu-toggle">
       <span class="line"></span>
       <span class="line"></span>
@@ -24,7 +24,7 @@
         <li><a href="#home" class="nav-link">Home</a></li>
         <li><a href="#about" class="nav-link">About</a></li>
         <li><a href="#projects" class="nav-link">Projects</a></li>
-        <li><a href="#contact" class="nav-link">Contact</a></li>
+        <li><a href="#daftar" class="nav-link">Daftar</a></li>
       </ul>
     </nav>
   </aside>
@@ -35,15 +35,10 @@
       <div class="home-content">
         <div class="description">
           <p>Welcome to My portfolio website!</p>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore a ducimus nisi cumque et aliquam fugit
-            quis consequuntur dolorem officia amet, quas error vero, delectus repudiandae velit quibusdam quidem harum
-            non. Voluptatum, ducimus ipsa doloribus cupiditate, quod incidunt animi unde sit itaque sequi veniam facere.
-          </p>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore a ducimus nisi cumque et aliquam fugit quis consequuntur dolorem officia amet, quas error vero, delectus repudiandae velit quibusdam quidem harum non. Voluptatum, ducimus ipsa doloribus cupiditate, quod incidunt animi unde sit itaque sequi veniam facere.</p>
         </div>
         <div class="image">
-          <img
-            src='https://images.unsplash.com/photo-1593720213428-28a5b9e94613?crop=entropy&cs=srgb&fm=jpg&ixid=M3wzMjM4NDZ8MHwxfHJhbmRvbXx8fHx8fHx8fDE3MjE4ODYzNjd8&ixlib=rb-4.0.3&q=85'
-            alt='Web Development'>
+          <img src='https://images.unsplash.com/photo-1593720213428-28a5b9e94613?crop=entropy&cs=srgb&fm=jpg&ixid=M3wzMjM4NDZ8MHwxfHJhbmRvbXx8fHx8fHx8fDE3MjE4ODYzNjd8&ixlib=rb-4.0.3&q=85' alt='Web Development'>
         </div>
       </div>
     </section>
@@ -53,15 +48,10 @@
       <div class="about-content">
         <div class="description">
           <p>Welcome to My portfolio website!</p>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore a ducimus nisi cumque et aliquam fugit
-            quis consequuntur dolorem officia amet, quas error vero, delectus repudiandae velit quibusdam quidem harum
-            non. Voluptatum, ducimus ipsa doloribus cupiditate, quod incidunt animi unde sit itaque sequi veniam facere.
-          </p>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolore a ducimus nisi cumque et aliquam fugit quis consequuntur dolorem officia amet, quas error vero, delectus repudiandae velit quibusdam quidem harum non. Voluptatum, ducimus ipsa doloribus cupiditate, quod incidunt animi unde sit itaque sequi veniam facere.</p>
         </div>
         <div class="image">
-          <img
-            src='https://images.unsplash.com/photo-1593720219276-0b1eacd0aef4?crop=entropy&cs=srgb&fm=jpg&ixid=M3wzMjM4NDZ8MHwxfHJhbmRvbXx8fHx8fHx8fDE3MjE4ODY2OTh8&ixlib=rb-4.0.3&q=85'
-            alt='Web Programming'>
+          <img src='https://images.unsplash.com/photo-1593720219276-0b1eacd0aef4?crop=entropy&cs=srgb&fm=jpg&ixid=M3wzMjM4NDZ8MHwxfHJhbmRvbXx8fHx8fHx8fDE3MjE4ODY2OTh8&ixlib=rb-4.0.3&q=85' alt='Web Programming'>
         </div>
       </div>
     </section>
@@ -70,128 +60,137 @@
       <h2>Projects</h2>
       <div class="projects-container">
         <div class="project-card">
-          <a href="https://www.youtube.com/watch?v=NBZ9Ro6UKV8&list=PLFIM0718LjIVuONHysfOK0ZtiqUWvrx4F"
-            target="_blank"><img src="image/html5.png" alt="HTML5 Logo"></a>
+          <a href=""> <img src="https://upload.wikimedia.org/wikipedia/commons/6/61/HTML5_logo_and_wordmark.svg" alt="HTML5 Logo"></a>
           <p>HTML5 Project</p>
         </div>
         <div class="project-card">
-          <a href="" target="_blank"><img src="image/css3.png" alt="CSS3 Logo"></a>
+          <a href=""> <img src="https://upload.wikimedia.org/wikipedia/commons/d/d5/CSS3_logo_and_wordmark.svg" alt="CSS3 Logo"></a>
           <p>CSS3 Project</p>
         </div>
         <div class="project-card">
-          <a href="" target="_blank"><img src="image/javascript.png" alt="JavaScript Logo"></a>
+          <a href=""> <img src="https://upload.wikimedia.org/wikipedia/commons/6/6a/JavaScript-logo.png" alt="JavaScript Logo"></a>
           <p>JavaScript Project</p>
         </div>
         <div class="project-card">
-          <a href="" target="_blank"><img src="image/react.png" alt="React Logo"></a>
+          <a href=""> <img src="https://upload.wikimedia.org/wikipedia/commons/a/a7/React-icon.svg" alt="React Logo"></a>
           <p>React Project</p>
         </div>
         <div class="project-card">
-          <a href="" target="_blank"><img src="image/laravel.png" alt="Laravel Logo"></a>
+          <a href=""><img src="https://upload.wikimedia.org/wikipedia/commons/9/9a/Laravel.svg" alt="Laravel Logo"></a>
           <p>Laravel Project</p>
         </div>
         <div class="project-card">
-          <a href="" target="_blank"><img src="image/php.png" alt="PHP Logo"></a>
+          <a href=""> <img src="https://upload.wikimedia.org/wikipedia/commons/2/27/PHP-logo.svg" alt="PHP Logo"></a>
           <p>PHP Project</p>
         </div>
-        <div class="project-card">
-          <a href="" target="_blank"><img src="image/codeigniter.png" alt="CodeIgniter Logo"></a>
-          <p>CodeIgniter Project</p>
-        </div>
-        <div class="project-card">
-          <a href="" target="_blank"><img src="image/python.png" alt="Python Logo"></a>
-          <p>Python Project</p>
-        </div>
-        <div class="project-card">
-          <a href="" target="_blank"><img src="image/vscode.png" alt="Visual studio code Logo"></a>
-          <p>Visual studio code Project</p>
-        </div>
       </div>
     </section>
 
-    <section id="contact" class="content-section">
-      <h2>Contact</h2>
-      <div class="contact-container">
-        <div class="map-container">
-          <iframe
-            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3151.835434509186!2d144.9537353153126!3d-37.81627937975171!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6ad65d43f1f1f1f1%3A0x1a0b1a1b1b1b1b1b!2sFederation%20Square!5e0!3m2!1sen!2sau!4v1590728858819!5m2!1sen!2sau"
-            width="100%" height="300" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false"
-            tabindex="0"></iframe>
+    <div class="content">
+      <section id="daftar" class="content-section">
+        <h2>Daftar</h2>
+        <div class="contact-container">
+          <div class="map-container">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3151.835434509186!2d144.9537353153126!3d-37.81627937975171!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6ad65d43f1f1f1f1%3A0x1a0b1a1b1b1b1b1b!2sFederation%20Square!5e0!3m2!1sen!2sau!4v1590728858819!5m2!1sen!2sau" width="100%" height="300" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+          </div>
+          <div class="form-container">
+            <form id="contact-form" enctype="multipart/form-data">
+              <div class="form-group">
+                <label for="fullname">Nama Lengkap</label>
+                <input type="text" id="fullname" name="fullname" required>
+              </div>
+              <div class="form-group">
+                <label for="birthplace">Tempat Lahir</label>
+                <input type="text" id="birthplace" name="birthplace" required>
+              </div>
+              <div class="form-group">
+                <label for="birthdate">Tanggal Lahir</label>
+                <input type="date" id="birthdate" name="birthdate" required>
+              </div>
+              <div class="form-group">
+                <label for="nis">NIS</label>
+                <input type="text" id="nis" name="nis" required>
+              </div>
+              <div class="form-group">
+                <label for="nisn">NISN</label>
+                <input type="text" id="nisn" name="nisn" required>
+              </div>
+              <div class="form-group">
+                <label for="nik">NIK</label>
+                <input type="text" id="nik" name="nik" required>
+              </div>
+              <div class="form-group">
+                <label for="kk">KK</label>
+                <input type="text" id="kk" name="kk" required>
+              </div>
+              <div class="form-group">
+                <label for="phone">Nomor Telepon</label>
+                <input type="text" id="phone" name="phone" required>
+              </div>
+              <div class="form-group">
+                <label for="email">Email</label>
+                <input type="email" id="email" name="email" required>
+              </div>
+              <div class="form-group">
+                <label for="photo">Foto (jpeg)</label>
+                <input type="file" id="photo" name="photo" accept="image/jpeg" capture="environment" required>
+              </div>
+              <div class="form-group">
+                <label for="ktp">Foto KTP (jpeg)</label>
+                <input type="file" id="ktp" name="ktp" accept="image/jpeg" capture="environment" required>
+              </div>
+              <div class="form-group">
+                <label for="kk-photo">Foto KK (jpeg)</label>
+                <input type="file" id="kk-photo" name="kk-photo" accept="image/jpeg" capture="environment" required>
+              </div>
+              <div class="form-group">
+                <label for="ijazah">Foto Ijazah (jpeg)</label>
+                <input type="file" id="ijazah" name="ijazah" accept="image/jpeg" capture="environment" required>
+              </div>
+
+              <div class="form-group">
+                <label for="alamat">Alamat</label>
+                <textarea id="alamat" name="alamat" rows="5" width="100%" required></textarea>
+              </div>
+
+              <div class="form-group">
+                <button type="submit">Daftar</button>
+              </div>
+            </form>
+          </div>
         </div>
-        <div class="form-container">
-          <form id="contact-form" enctype="multipart/form-data" action="process_form.php" method="post">
-
-            <label for="name">Name</label>
-            <input type="text" id="name" name="name" required>
-
-            <label for="email">Email</label>
-            <input type="email" id="email" name="email" required>
-
-            <label for="phone">Phone Number</label>
-            <input type="text" id="phone" name="phone" required>
-
-            <label for="birthplace">Tempat La
-              hir</label>
-            <input type="text" id="birthplace" name="birthplace" required>
-
-            <label for="birthdate">Tanggal Lahir</label>
-            <input type="date" id="birthdate" name="birthdate" required>
-
-            <label for="nik">Nomor Induk Kependudukan</label>
-            <input type="text" id="nik" name="nik" required>
-
-            <label for="kk">Nomor Kartu Keluarga</label>
-            <input type="text" id="kk" name="kk" required>
-
-            <label for="ayah">Nama Ayah</label>
-            <input type="text" id="ayah" name="ayah" required>
-
-            <label for="ibu">Nama Ibu</label>
-            <input type="text" id="ibu" name="ibu" required>
-
-            <label for="photo">Foto (jpg, jpeg)</label>
-            <input type="file" id="photo" name="photo" accept="image/jpeg" required>
-
-            <label for="ktp">Foto KTP (jpeg)</label>
-            <input type="file" id="ktp" name="ktp" accept="image/jpeg" required>
-
-            <label for="kk-photo">Foto KK (jpeg)</label>
-            <input type="file" id="kk-photo" name="kk-photo" accept="image/jpeg" required>
-
-            <label for="ijazah">Foto Ijazah (jpeg)</label>
-            <input type="file" id="ijazah" name="ijazah" accept="image/jpeg" required>
-
-            <label for="address">Address</label>
-            <input type="text" id="address" name="address" required>
-
-            <label for="message">Message</label>
-            <textarea id="message" name="message" required></textarea>
-
-            <button type="submit">Submit</button>
-          </form>
-        </div>
-      </div>
-    </section>
+      </section>
+    </div>
   </main>
 
   <footer>
-    <p>Copyright &copy; 2024 <a href="" target="_blank"> Natalia </a></p>
+    <p>&copy; 2023 My Portfolio. All rights reserved.</p>
   </footer>
 
-  <script src="script.js"></script>
-
   <script>
-    const scriptURL = '<SCRIPT URL>'
-    const form = document.forms['submit-to-google-sheet']
-    form.addEventListener('submit', e => {
-      e.preventDefault()
-      fetch(scriptURL, {
-        method: 'POST',
-        body: new FormData(form)
-      })
-        .then(response => console.log('Success!', response))
-        .catch(error => console.error('Error!', error.message))
-    })
+    const menuToggle = document.getElementById('menu-toggle');
+    const sidebar = document.getElementById('sidebar');
+
+    menuToggle.addEventListener('click', () => {
+      sidebar.classList.toggle('open');
+      menuToggle.classList.toggle('open');
+    });
+
+    document.addEventListener('click', (e) => {
+      if (!sidebar.contains(e.target) && !menuToggle.contains(e.target)) {
+        sidebar.classList.remove('open');
+        menuToggle.classList.remove('open');
+      }
+    });
+
+    // Membatasi input hanya angka untuk field NIS, NISN, NIK, KK, dan phone
+    const numberFields = ['nis', 'nisn', 'nik', 'kk', 'phone'];
+    numberFields.forEach((fieldId) => {
+      const field = document.getElementById(fieldId);
+      field.addEventListener('input', (e) => {
+        field.value = field.value.replace(/\D/, '');
+      });
+    });
   </script>
 </body>
 
