--- a/index.html
+++ b/index.html
@@ -168,6 +168,31 @@
   </footer>
 
   <script src="script.js"></script>
+  <script>
+    const menuToggle = document.getElementById('menu-toggle');
+    const sidebar = document.getElementById('sidebar');
+
+    menuToggle.addEventListener('click', () => {
+      sidebar.classList.toggle('open');
+      menuToggle.classList.toggle('open');
+    });
+
+    document.addEventListener('click', (e) => {
+      if (!sidebar.contains(e.target) && !menuToggle.contains(e.target)) {
+        sidebar.classList.remove('open');
+        menuToggle.classList.remove('open');
+      }
+    });
+
+    // Membatasi input hanya angka untuk field NIS, NISN, NIK, KK, dan phone
+    const numberFields = ['nis', 'nisn', 'nik', 'kk', 'phone'];
+    numberFields.forEach((fieldId) => {
+      const field = document.getElementById(fieldId);
+      field.addEventListener('input', (e) => {
+        field.value = field.value.replace(/\D/, '');
+      });
+    });
+  </script>
 </body>
 
 </html>
