Perubahan pada form contact

--- a/index.html
+++ b/index.html
@@ -123,6 +123,17 @@
               <div class="form-group">
                 <label for="kk">KK</label>
                 <input type="text" id="kk" name="kk" required>
+              </div> <div class="form-group">
+                <label for="nama-ayah">Nama ayah</label>
+                <input type="text" id="nama-ayah" name="nama-ayah" required>
+              </div>
+              <div class="form-group">
+                <label for="nama-ibuK</label>
+                <input type="text" id="nama-ibu" name="nama-ibu" required>
+              </div>
+              <div class="form-group">
+                <label for="nama-ibu">Nama ibu</label>
+                <input type="text" id="nama-ibu" name="kk" required>
               </div>
               <div class="form-group">
                 <label for="phone">Nomor Telepon</label>
