--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <script src="https://apis.google.com/js/platform.js" async defer></script>
   <meta name="google-signin-client_id" content="YOUR_CLIENT_ID.apps.googleusercontent.com">
   <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="./node_modules/bootstrap/dist/css/bootstrap.min.css">
 </head>
 
 <body>
@@ -253,7 +254,7 @@
   </footer>
 
   <script src="script.js"></script>
-
+  <script src="./node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
   <script>
     const menuToggle = document.getElementById('menu-toggle');
     const sidebar = document.getElementById('sidebar');
