--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Latihan5</title>
-  <link rel="icon" href="image/1.svg" type="image/x-icon">
+  <link rel="icon" href="logo.icon" type="image/x-icon">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
   <script src="https://cdn.tailwindcss.com"></script>
@@ -153,29 +153,31 @@
 
     <section id="projects" class="mb-8">
       <h2 class="text-2xl font-bold mb-4">Projects</h2>
-      <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4">
+      <div id="project-cards" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4">
         <!-- Project Cards -->
-        <div class="card bg-white p-4 rounded-lg shadow-md">
+        <div class="card bg-white p-4 rounded-lg shadow-md" data-id="1">
           <img class="w-full h-48 object-contain mb-4 rounded-lg" src="https://images.unsplash.com/photo-1531030874896-fdef6826f2f7?crop=entropy&cs=srgb&fm=jpg&ixid=M3wzMjM4NDZ8MHwxfHJhbmRvbXx8fHx8fHx8fDE3MjQ4NTM4Njh8&ixlib=rb-4.0.3&q=85" alt="Project 1">
           <h3 class="text-xl font-semibold mb-2">Web Development</h3>
           <p>Email: project1@example.com</p>
           <button class="detail-btn bg-blue-500 text-white px-4 py-2 rounded-lg mt-2" data-id="1">Detail</button>
         </div>
 
-        <div class="card bg-white p-4 rounded-lg shadow-md">
+        <div class="card bg-white p-4 rounded-lg shadow-md" data-id="2">
           <img class="w-full h-48 object-contain mb-4 rounded-lg" src="https://images.unsplash.com/photo-1605379399642-870262d3d051?crop=entropy&cs=srgb&fm=jpg&ixid=M3wzMjM4NDZ8MHwxfHJhbmRvbXx8fHx8fHx8fDE3MjQ4NTM4Njh8&ixlib=rb-4.0.3&q=85" alt="Project 2">
           <h3 class="text-xl font-semibold mb-2">Web Programming</h3>
           <p>Email: projects2@example.com</p>
           <button class="detail-btn bg-blue-500 text-white px-4 py-2 rounded-lg mt-2" data-id="2">Detail</button>
         </div>
-        <div class="card bg-white p-4 rounded-lg shadow-md">
+
+        <div class="card bg-white p-4 rounded-lg shadow-md" data-id="3">
           <img class="w-full h-48 object-contain mb-4 rounded-lg" src="https://images.unsplash.com/photo-1505330622279-bf7d7fc918f4?crop=entropy&cs=srgb&fm=jpg&ixid=M3wzMjM4NDZ8MHwxfHJhbmRvbXx8fHx8fHx8fDE3MjQ4NTQwNTB8&ixlib=rb-4.0.3&q=85" alt="Project 3">
           <h3 class="text-xl font-semibold mb-2">Android Studio</h3>
           <p>Email: project3@example.com</p>
           <button class="detail-btn bg-blue-500 text-white px-4 py-2 rounded-lg mt-2" data-id="3">Detail</button>
         </div>
-
       </div>
+
+      <!-- Form Detail Section (Hidden by default) -->
       <div id="form-container" class="hidden bg-white p-4 rounded-lg shadow-md">
         <img id="detail-image" class="w-full h-32 object-cover mb-4 rounded-lg" src="" alt="Detail Image">
         <h3 id="detail-name" class="text-xl font-semibold mb-2">Nama:</h3>
@@ -184,7 +186,6 @@
         <p id="detail-skills">Keahlian:</p>
         <button id="back-btn" class="bg-red-500 text-white px-4 py-2 rounded-lg mt-2">Kembali</button>
       </div>
-
     </section>
 
     <section id="contact" class="hidden">
