--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Latihan5</title>
-  <link rel="icon" href="logo.icon" type="image/x-icon">
+  <link rel="icon" href="image/1.svg" type="image/x-icon">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
   <script src="https://cdn.tailwindcss.com"></script>
@@ -134,17 +134,19 @@
       <h2 class="text-2xl font-bold mb-4">Gallery</h2>
       <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-4">
         <div class="cards bg-white p-4 rounded-lg shadow-md">
-          <img class="w-full h-48 object-contain mb-4 rounded-lg" src="https://images.unsplash.com/photo-1488590528505-98d2b5aba04b?crop=entropy&cs=srgb&fm=jpg&ixid=M3wzMjM4NDZ8MHwxfHJhbmRvbXx8fHx8fHx8fDE3MjQ4NTMwOTh8&ixlib=rb-4.0.3&q=85" alt="Gallery Image 1">
+          <img class="w-full h-48 object-contain mb-4 rounded-lg" src="image/P2705003100027
+          .png" alt="Gallery Image 1">
           <h3 class="text-xl font-semibold mb-2">Image 1</h3>
           <p>Deskripsi gambar 1.</p>
         </div>
         <div class="cards bg-white p-4 rounded-lg shadow-md">
-          <img class="w-full h-48 object-contain mb-4 rounded-lg" src="https://images.unsplash.com/photo-1460925895917-afdab827c52f?crop=entropy&cs=srgb&fm=jpg&ixid=M3wzMjM4NDZ8MHwxfHJhbmRvbXx8fHx8fHx8fDE3MjQ4NTMzMDN8&ixlib=rb-4.0.3&q=85" alt="Gallery Image 2">
+          <img class="w-full h-48 object-contain mb-4 rounded-lg" src="image/P2705003100089-.png" alt="Gallery Image 2">
           <h3 class="text-xl font-semibold mb-2">Image 2</h3>
           <p>Deskripsi gambar 2.</p>
         </div>
         <div class="cards bg-white p-4 rounded-lg shadow-md">
-          <img class="w-full h-48 object-contain mb-4 rounded-lg" src="https://images.unsplash.com/photo-1453928582365-b6ad33cbcf64?crop=entropy&cs=srgb&fm=jpg&ixid=M3wzMjM4NDZ8MHwxfHJhbmRvbXx8fHx8fHx8fDE3MjQ4NTMzMDN8&ixlib=rb-4.0.3&q=85" alt="Gallery Image 3">
+          <img class="w-full h-48 object-contain mb-4 rounded-lg" src="image/P2705003100089
+          .png" alt="Gallery Image 3">
           <h3 class="text-xl font-semibold mb-2">Image 3</h3>
           <p>Deskripsi gambar 3.</p>
         </div>
