--- a/index.html
+++ b/index.html
@@ -134,18 +134,18 @@
       <h2 class="text-2xl font-bold mb-4">Gallery</h2>
       <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-4">
         <div class="cards bg-white p-4 rounded-lg shadow-md">
-          <img class="w-full h-48 object-contain mb-4 rounded-lg" src="image/P2705003100027
+          <img class="w-full h-48 object-contain mb-4 rounded-lg" src="image/P2705003100027.png" alt="Foto siswa">
           .png" alt="Gallery Image 1">
           <h3 class="text-xl font-semibold mb-2">Image 1</h3>
           <p>Deskripsi gambar 1.</p>
         </div>
         <div class="cards bg-white p-4 rounded-lg shadow-md">
-          <img class="w-full h-48 object-contain mb-4 rounded-lg" src="image/P2705003100089-.png" alt="Gallery Image 2">
+          <img class="w-full h-48 object-contain mb-4 rounded-lg" src="image/P2705003100089.png" alt="Foto siswa">
           <h3 class="text-xl font-semibold mb-2">Image 2</h3>
           <p>Deskripsi gambar 2.</p>
         </div>
         <div class="cards bg-white p-4 rounded-lg shadow-md">
-          <img class="w-full h-48 object-contain mb-4 rounded-lg" src="image/P2705003100089
+          <img class="w-full h-48 object-contain mb-4 rounded-lg" src="image/P2705003100089.png" alt="Foto siswa">
           .png" alt="Gallery Image 3">
           <h3 class="text-xl font-semibold mb-2">Image 3</h3>
           <p>Deskripsi gambar 3.</p>
