--- a/index.html
+++ b/index.html
@@ -139,12 +139,12 @@
           <p>Deskripsi gambar 1.</p>
         </div>
         <div class="cards bg-white p-4 rounded-lg shadow-md">
-          <img class="w-full h-48 object-contain mb-4 rounded-lg" src="" alt="Foto siswa">
+          <img class="w-full h-48 object-contain mb-4 rounded-lg" src="image/P2705003100107.jpeg" alt="Foto siswa">
           <h3 class="text-xl font-semibold mb-2">Image 2</h3>
           <p>Deskripsi gambar 2.</p>
         </div>
         <div class="cards bg-white p-4 rounded-lg shadow-md">
-          <img class="w-full h-48 object-contain mb-4 rounded-lg" src="" alt="Foto siswa">
+          <img class="w-full h-48 object-contain mb-4 rounded-lg" src="image/P2705003100072.png" alt="Foto siswa">
           <h3 class="text-xl font-semibold mb-2">Image 3</h3>
           <p>Deskripsi gambar 3.</p>
         </div>
@@ -156,21 +156,21 @@
       <div id="project-cards" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4">
         <!-- Project Cards -->
         <div class="card bg-white p-4 rounded-lg shadow-md" data-id="1">
-          <img class="w-full h-48 object-contain mb-4 rounded-lg" src="https://images.unsplash.com/photo-1531030874896-fdef6826f2f7?crop=entropy&cs=srgb&fm=jpg&ixid=M3wzMjM4NDZ8MHwxfHJhbmRvbXx8fHx8fHx8fDE3MjQ4NTM4Njh8&ixlib=rb-4.0.3&q=85" alt="Project 1">
+          <img class="w-full h-48 object-contain mb-4 rounded-lg" src="" alt="Project 1">
           <h3 class="text-xl font-semibold mb-2">Web Development</h3>
           <p>Email: project1@example.com</p>
           <button class="detail-btn bg-blue-500 text-white px-4 py-2 rounded-lg mt-2" data-id="1">Detail</button>
         </div>
 
         <div class="card bg-white p-4 rounded-lg shadow-md" data-id="2">
-          <img class="w-full h-48 object-contain mb-4 rounded-lg" src="https://images.unsplash.com/photo-1605379399642-870262d3d051?crop=entropy&cs=srgb&fm=jpg&ixid=M3wzMjM4NDZ8MHwxfHJhbmRvbXx8fHx8fHx8fDE3MjQ4NTM4Njh8&ixlib=rb-4.0.3&q=85" alt="Project 2">
+          <img class="w-full h-48 object-contain mb-4 rounded-lg" src="" alt="Project 2">
           <h3 class="text-xl font-semibold mb-2">Web Programming</h3>
           <p>Email: projects2@example.com</p>
           <button class="detail-btn bg-blue-500 text-white px-4 py-2 rounded-lg mt-2" data-id="2">Detail</button>
         </div>
 
         <div class="card bg-white p-4 rounded-lg shadow-md" data-id="3">
-          <img class="w-full h-48 object-contain mb-4 rounded-lg" src="https://images.unsplash.com/photo-1505330622279-bf7d7fc918f4?crop=entropy&cs=srgb&fm=jpg&ixid=M3wzMjM4NDZ8MHwxfHJhbmRvbXx8fHx8fHx8fDE3MjQ4NTQwNTB8&ixlib=rb-4.0.3&q=85" alt="Project 3">
+          <img class="w-full h-48 object-contain mb-4 rounded-lg" src="" alt="Project 3">
           <h3 class="text-xl font-semibold mb-2">Android Studio</h3>
           <p>Email: project3@example.com</p>
           <button class="detail-btn bg-blue-500 text-white px-4 py-2 rounded-lg mt-2" data-id="3">Detail</button>
