--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
   <title>Latihan5</title>
   <link rel="icon" href="image/1.svg" type="image/x-icon">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+  <link rel="stylesheet"
+    href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
   <script src="https://cdn.tailwindcss.com"></script>
   <link rel="stylesheet" href="style.css">
 </head>
@@ -15,7 +16,7 @@
 <body class="font-sans">
 
   <!-- Header -->
-  <header class="bg-blue-600 text-white p-4 fixed w-full top-0 z-30">
+  <header class="bg-blue-600 text-white p-4 fixed w-full top-0 z-50">
     <div class="container mx-auto flex justify-between items-center">
       <h1 class="text-xl font-bold">Imat <span>Abu</span> Kamal</h1>
       <button id="menu-toggle" class="lg:hidden block">
@@ -130,7 +131,7 @@
       </div>
     </section>
 
-    <section id="gallery" class="hidden mb-8">
+     <section id="gallery" class="hidden mb-8">
       <h2 class="text-2xl font-bold mb-4">Gallery</h2>
       <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-4">
         <div class="cards bg-white p-4 rounded-lg shadow-md">
@@ -156,21 +157,21 @@
       <div id="project-cards" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4">
         <!-- Project Cards -->
         <div class="card bg-white p-4 rounded-lg shadow-md" data-id="1">
-          <img class="w-full h-48 object-contain mb-4 rounded-lg" src="" alt="Project 1">
+          <img class="w-full h-48 object-contain mb-4 rounded-lg" src="image/P2705003100107.jpeg" alt="Project 1">
           <h3 class="text-xl font-semibold mb-2">Web Development</h3>
           <p>Email: project1@example.com</p>
           <button class="detail-btn bg-blue-500 text-white px-4 py-2 rounded-lg mt-2" data-id="1">Detail</button>
         </div>
 
         <div class="card bg-white p-4 rounded-lg shadow-md" data-id="2">
-          <img class="w-full h-48 object-contain mb-4 rounded-lg" src="" alt="Project 2">
+          <img class="w-full h-48 object-contain mb-4 rounded-lg" src="image/P2705003100027.png" alt="Project 2">
           <h3 class="text-xl font-semibold mb-2">Web Programming</h3>
           <p>Email: projects2@example.com</p>
           <button class="detail-btn bg-blue-500 text-white px-4 py-2 rounded-lg mt-2" data-id="2">Detail</button>
         </div>
 
         <div class="card bg-white p-4 rounded-lg shadow-md" data-id="3">
-          <img class="w-full h-48 object-contain mb-4 rounded-lg" src="" alt="Project 3">
+          <img class="w-full h-48 object-contain mb-4 rounded-lg" src="image/P2705003100072.png" alt="Project 3">
           <h3 class="text-xl font-semibold mb-2">Android Studio</h3>
           <p>Email: project3@example.com</p>
           <button class="detail-btn bg-blue-500 text-white px-4 py-2 rounded-lg mt-2" data-id="3">Detail</button>
@@ -376,7 +377,7 @@
   </main>
 
   <!-- Footer -->
-  <footer class="bg-slate-50 text-blue-900 py-4 mt-8 z-50">
+  <footer class="bg-slate-50 text-blue-900 py-4 mt-8 	z-50">
     <div class="container mx-auto flex flex-col md:flex-row justify-between items-center">
       <div class="text-center md:text-left mb-4 md:mb-0">
         <p>&copy; 2024 Imat Abu Kamal. All rights reserved.</p>
