--- a/index.html
+++ b/index.html
@@ -192,44 +192,47 @@
     <section id="contact" class="hidden">
       <h2 class="text-2xl font-bold mb-4">Contact</h2>
       <div class="flex flex-col lg:flex-row lg:space-x-8">
+        <!-- Map Placeholder -->
         <div class="map w-full lg:w-1/2 h-96 bg-gray-200 mb-4 lg:mb-0">
-          <p class="text-center pt-24">Map Placeholder</p>
+          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d63836.96659999438!2d127.80735046540863!3d-0.11407492050781395!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2d62857929e6ec05%3A0x43b111b86ed4cd75!2sBukit%20Indah%2C%20Kec.%20Gane%20Tim.%2C%20Kabupaten%20Halmahera%20Selatan%2C%20Maluku%20Utara!5e0!3m2!1sid!2sid!4v1718112883908!5m2!1sid!2sid" style="border:0;" allowfullscreen loading="lazy" referrerpolicy="no-referrer-when-downgrade" class="w-full h-full"></iframe>
         </div>
-        <form id="myForm" enctype="multipart/form-data" class="w-full lg:w-1/2 bg-white p-4 rounded-lg shadow-md space-y-4">
-          <!-- Form Fields -->
-
-          <div>
-            <label for="name" class="block text-gray-700">Nama:</label>
-            <input type="text" id="name" name="name" class="w-full border border-gray-300 rounded-lg p-2">
+    
+        <!-- Form and Contact Info -->
+        <div class="w-full lg:w-1/2 space-y-4 mt-4">
+          <!-- Contact Info with Icons -->
+          <div class="contact-item">
+            <div class="contact-item-icon flex items-center">
+              <span class="material-symbols-outlined">call</span>
+              <div class="contact-item-detail ml-4">
+                <h4 class="text-lg font-semibold text-gray-700">Phone</h4>
+                <p class="text-gray-500">(501) 414-1541</p>
+              </div>
+            </div>
           </div>
-
-          <div>
-            <label for="email" class="block text-gray-700">Email:</label>
-            <input type="email" id="email" name="email" class="w-full border border-gray-300 rounded-lg p-2">
+          <div class="contact-item">
+            <div class="contact-item-icon flex items-center">
+              <span class="material-symbols-outlined">contact_mail</span>
+              <div class="contact-item-detail ml-4">
+                <h4 class="text-lg font-semibold text-gray-700">Email</h4>
+                <p class="text-gray-500">imatabukamal@gmail.com</p>
+              </div>
+            </div>
           </div>
-
-          <div>
-            <label for="phone" class="block text-gray-700">Telepon:</label>
-            <input type="text" name="phone" id="phone" class="w-full border border-gray-300 rounded-lg p-2" onkeyup="this.value=this.value.replace(/[^0-9]/g,'');" maxlength="12" minlength="10" required>
+          <div class="contact-item">
+            <div class="contact-item-icon flex items-center">
+              <span class="material-symbols-outlined">location_on</span>
+              <div class="contact-item-detail ml-4">
+                <h4 class="text-lg font-semibold text-gray-700">Address</h4>
+                <p class="text-gray-500">Desa Sumber Makmur</p>
+                <p class="text-gray-500">Kecamatan Gane Timur, Kode Pos 98773</p>
+                <p class="text-gray-500">Kabupaten Halmahera Selatan</p>
+              </div>
+            </div>
           </div>
-
-          <div>
-            <label for="address" class="block text-gray-700">Alamat:</label>
-            <textarea id="address" name="address" class="w-full border border-gray-300 rounded-lg p-2"></textarea>
-          </div>
-          <div>
-            <label for="message" class="block text-gray-700">Pesan:</label>
-            <textarea id="message" name="message" class="w-full border border-gray-300 rounded-lg p-2"></textarea>
-          </div>
-          <div>
-            <label for="photo" class="block text-sm font-medium">Upload Photo</label>
-            <input type="file" id="photo" name="photo" accept="image/jpeg,image/png" capture="user" class="mt-1 block w-full" required>
-          </div>
-          <button type="submit" class="w-full bg-blue-500 text-white py-2 rounded-lg">Kirim</button>
-          <div id="form-notification" class="mt-4"></div>
-        </form>
+        </div>
       </div>
     </section>
+    
 
     <!-- Kursus -->
     <section id="computer-course-link" class="continue-course bg-white-600 text-blue py-2 px-4 rounded">
