--- a/public/index.html
+++ b/public/index.html
@@ -6,9 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Latihan5</title>
   <link rel="icon" href="public/image/html5.png" type="image/x-icon">
-  <link rel="stylesheet"
-    href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
-  <script src="https://cdn.tailwindcss.com"></script>
+  <link rel="stylesheet"href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+  <link rel="stylesheet" href="./output.css">
   <link rel="stylesheet" href="style.css">
   <!-- Font Awesome -->
   <link rel="stylesheet" href="node_modules/@fortawesome/fontawesome-free/css/all.min.css">
@@ -153,7 +152,7 @@
       </div>
     </section>
 
-    <section id="projects" class="mb-8 items-center items-center justify-center">
+    <section id="projects" class="mb-8 items-center justify-center
       <h2 class="text-2xl font-bold mb-4">Projects</h2>
       <div id="project-cards" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4 items-center justify-center">
         <!-- Project Cards -->
@@ -280,7 +279,7 @@
     </section>
 
     <!-- Pendaftaran  -->
-    <section id="registration-form" class="hidden min-h-screen flex items-center justify-center mb-8">
+    <section id="registration-form" class="hidden min-h-screen items-center justify-center mb-8">
       <div class="md:w-2/3 bg-white p-2 shadow-lg rounded-lg">
         <h2 class="text-2xl font-bold mb-4">Formulir Pendaftaran Kursus</h2>
         <form id="course-form" class="grid grid-cols-1 md:grid-cols-2 gap-4">
