--- a/public/index.html
+++ b/public/index.html
@@ -7,8 +7,7 @@
   <title>Latihan5</title>
   <link rel="icon" href="public/image/html5.png" type="image/x-icon">
   <link rel="stylesheet"href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
-  <link rel="stylesheet" href="../output.css">
-  <link rel="stylesheet" href="../public/">
+  <link rel="stylesheet" href="/public/final.css"> 
   <!-- Font Awesome -->
   <link rel="stylesheet" href="node_modules/@fortawesome/fontawesome-free/css/all.min.css">
 </head>
