--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Latihan5</title>
   <link rel="icon" href="/public/image/html5.png" type="image/x-icon">
-  <link rel="stylesheet"href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+  <!-- <link rel="stylesheet"href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" /> -->
   <link rel="stylesheet" href="/public/final.css"> 
   <!-- Font Awesome -->
   <link rel="stylesheet" href="node_modules/@fortawesome/fontawesome-free/css/all.min.css">
@@ -151,26 +151,26 @@
       </div>
     </section>
 
-    <section id="projects" class="mb-8 items-center justify-center
+    <section id="projects" class="mb-8 items-center items-center justify-center">
       <h2 class="text-2xl font-bold mb-4">Projects</h2>
       <div id="project-cards" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4 items-center justify-center">
         <!-- Project Cards -->
         <div class="card bg-white p-4 rounded-lg shadow-md" data-id="1">
-          <img class="w-full h-96 object-cover mb-4 rounded-lg -translate-y-6" src="public/image/html5.png" alt="Project 1">
+          <img class="w-full h-96 object-cover mb-4 rounded-lg -translate-y-6" src="https://images.unsplash.com/photo-1531030874896-fdef6826f2f7?crop=entropy&cs=srgb&fm=jpg&ixid=M3wzMjM4NDZ8MHwxfHJhbmRvbXx8fHx8fHx8fDE3MjQ4NTM4Njh8&ixlib=rb-4.0.3&q=85" alt="Project 1">
           <h3 class="text-xl font-semibold mb-2">Web Development</h3>
           <p>Email: project1@example.com</p>
           <button class="detail-btn bg-blue-500 text-white px-4 py-2 rounded-lg mt-2" data-id="1">Detail</button>
         </div>
 
         <div class="card bg-white p-4 rounded-lg shadow-md" data-id="2">
-          <img class="w-full h-96 object-cover mb-4 rounded-lg -translate-y-6" src="public/image/php.png" alt="Project 2">
+          <img class="w-full h-96 object-cover mb-4 rounded-lg -translate-y-6" src="https://images.unsplash.com/photo-1605379399642-870262d3d051?crop=entropy&cs=srgb&fm=jpg&ixid=M3wzMjM4NDZ8MHwxfHJhbmRvbXx8fHx8fHx8fDE3MjQ4NTM4Njh8&ixlib=rb-4.0.3&q=85" alt="Project 2">
           <h3 class="text-xl font-semibold mb-2">Web Programming</h3>
           <p>Email: projects2@example.com</p>
           <button class="detail-btn bg-blue-500 text-white px-4 py-2 rounded-lg mt-2" data-id="2">Detail</button>
         </div>
 
         <div class="card bg-white p-4 rounded-lg shadow-md" data-id="3">
-          <img class="w-full h-96 object-cover mb-4 rounded-lg -translate-y-6" src="public/image/codeigniter.png" alt="Project 3">
+          <img class="w-full h-96 object-cover mb-4 rounded-lg -translate-y-6" src="https://images.unsplash.com/photo-1505330622279-bf7d7fc918f4?crop=entropy&cs=srgb&fm=jpg&ixid=M3wzMjM4NDZ8MHwxfHJhbmRvbXx8fHx8fHx8fDE3MjQ4NTQwNTB8&ixlib=rb-4.0.3&q=85" alt="Project 3">
           <h3 class="text-xl font-semibold mb-2">Android Studio</h3>
           <p>Email: project3@example.com</p>
           <button class="detail-btn bg-blue-500 text-white px-4 py-2 rounded-lg mt-2" data-id="3">Detail</button>
@@ -278,7 +278,7 @@
     </section>
 
     <!-- Pendaftaran  -->
-    <section id="registration-form" class="hidden min-h-screen items-center justify-center mb-8">
+    <section id="registration-form" class="hidden min-h-screen flex items-center justify-center mb-8">
       <div class="md:w-2/3 bg-white p-2 shadow-lg rounded-lg">
         <h2 class="text-2xl font-bold mb-4">Formulir Pendaftaran Kursus</h2>
         <form id="course-form" class="grid grid-cols-1 md:grid-cols-2 gap-4">
