--- a/public/index.html
+++ b/public/index.html
@@ -151,7 +151,7 @@
       </div>
     </section>
 
-    <section id="projects" class="mb-8 items-center items-center justify-center">
+    <section id="projects" class="mb-8 items-center justify-center">
       <h2 class="text-2xl font-bold mb-4">Projects</h2>
       <div id="project-cards" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4 items-center justify-center">
         <!-- Project Cards -->
@@ -278,7 +278,7 @@
     </section>
 
     <!-- Pendaftaran  -->
-    <section id="registration-form" class="hidden min-h-screen flex items-center justify-center mb-8">
+    <section id="registration-form" class="hidden min-h-screen items-center justify-center mb-8">
       <div class="md:w-2/3 bg-white p-2 shadow-lg rounded-lg">
         <h2 class="text-2xl font-bold mb-4">Formulir Pendaftaran Kursus</h2>
         <form id="course-form" class="grid grid-cols-1 md:grid-cols-2 gap-4">
